swagger updates
