# swagger-docs/swagger.json
@@ -16,7 +16,7 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/execution/{executionId}/abort": {
+        "/api/v1/execution/{executionId}/abort": {
             "get": {
                 "description": "Kill a running k8s job and update its task execution",
                 "produces": [
@@ -42,24 +42,7 @@
                 }
             }
         },
-        "/ping": {
-            "get": {
-                "description": "Used for health check",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Health"
-                ],
-                "summary": "Health check route",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/task": {
+        "/api/v1/task": {
             "get": {
                 "description": "Filter to get the task definitions you need",
                 "produces": [
@@ -134,7 +117,7 @@
                 }
             }
         },
-        "/task/pending": {
+        "/api/v1/task/pending": {
             "get": {
                 "description": "Filter to get the task pending tasks",
                 "produces": [
@@ -157,7 +140,7 @@
                 }
             }
         },
-        "/task/{definitionId}": {
+        "/api/v1/task/{definitionId}": {
             "delete": {
                 "description": "Mark a task definition as deleted (it is not actually deleted from the db)",
                 "produces": [
@@ -183,7 +166,7 @@
                 }
             }
         },
-        "/task/{definitionId}/latest": {
+        "/api/v1/task/{definitionId}/latest": {
             "get": {
                 "description": "Filter to get the task definitions you need",
                 "produces": [
@@ -215,8 +198,8 @@
                 }
             }
         },
-        "/task/{definitionId}/rerun": {
-            "get": {
+        "/api/v1/task/{definitionId}/rerun": {
+            "post": {
                 "description": "Rerun a task definition previously created",
                 "produces": [
                     "application/json"
@@ -234,6 +217,23 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "Used for health check",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Health check route",
                 "responses": {
                     "200": {
                         "description": "OK"
